# docvoice

./: .env.example  .env.test  .gitattributes  .gitignore  EXTENSION_WALKTHROUGH.md  README.md  RUN_INSTRUCTIONS.md  analysis_errors.txt  analysis_errors_2.txt  analysis_errors_3.txt  analysis_options.yaml  analysis_output.txt  analysis_output_fresh.txt  build_apk_log.txt  build_apk_log2.txt  build_apk_log_utf8.txt  build_extension.ps1  build_extension_clean.ps1  build_log.txt  build_log2.txt  build_log4.txt  build_log6.txt  build_log7.txt  build_output.txt  build_pwa.ps1  build_whisper_dll.ps1  env  fix_const.dart  fix_const.py  fix_themes.py  flutter_help.txt  flutter_help_full.txt  generate_icons.ps1  generate_transparent_icons.ps1  history_settings.txt  history_settings_utf8.txt  lib_errors.txt  old_settings.dart  package-lock.json  package.json  (+9 more)
.kilocode/: task_history.json
android/: build.gradle.kts  build_log5.txt  gradle_error.txt
android/app/: build.gradle.kts
android/app/src/main/cpp/: CMakeLists.txt
assets/hotwords/: medical_hotwords.txt
backup_untracked/: GeneratedPluginRegistrant.swift
build_whisper/: CMakeLists.txt
docs/: backend_migration_plan.md
lib/: dump_asn1.dart  main.dart  main_extension.dart  test_rsa.dart
lib/core/: core.dart  medical_departments.dart
lib/data/: cache_strategy.dart
lib/desktop/: desktop_app.dart  desktop_app_stub.dart  gemini_test_dialog.dart  inbox_card.dart  inbox_manager_dialog.dart  inbox_note_detail_view.dart  inbox_note_detail_view_BACKUP.dart  inbox_widget.dart  macro_explorer_dialog.dart  macro_manager_dialog.dart  macro_settings_dialog.dart  qr_connect_dialog.dart  qr_pairing_dialog.dart
lib/examples/: backend_integration_example.dart
lib/landing_page/: landing_page.dart  main_landing.dart
lib/mobile/: mobile_app.dart  qr_scanner_screen.dart
lib/mobile_app/: main.dart
lib/models/: app_theme.dart  company.dart  inbox_note.dart  inbox_note.g.dart  inbox_note_io.dart  inbox_note_io.g.dart  inbox_note_web.dart  macro.dart  macro.g.dart  macro_io.dart  macro_io.g.dart  macro_web.dart  smart_suggestion.dart  user.dart
lib/screens/: admin_company_settings_screen.dart  admin_dashboard_screen.dart  admin_templates_screen.dart  companies_list_screen.dart  company_detail_screen.dart  company_settings_dialog.dart  login_screen.dart  qr_login_screen.dart  register_screen.dart  secure_pairing_screen.dart  settings_dialog.dart  user_detail_screen.dart  users_list_screen.dart
lib/services/: admin_service.dart  api_service.dart  audio_chunker_service.dart  audio_recorder_service.dart  auth_service.dart  base_api_service.dart  cache_manager.dart  connectivity_client.dart  connectivity_server.dart  database_service.dart  database_service_io.dart  database_service_web.dart  department_service.dart  (+26 more)
mobile_app/: README.md  pubspec.yaml
test/: widget_test.dart
web/: background.js  content_script.js  index.html  inject_helper.js  manifest.json  manifest_pwa.json  permissions.html  permissions_script.js
web_extension/: background.js  content_script.js  extension_interop.js  extension_loader.js  extension_loader_v2.js  index.html  manifest.json  permissions.html
windows/: CMakeLists.txt  whisper_bridge.cpp
(+732 files in other folders)
